Basic styling and structure

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Todo-List-App</title>
 </head>
 <body>
@@ -11,7 +12,16 @@
             <h2>Todo List App</h2>
         </div>
         <div class="content">
+            <!-- <ul>
+                <li>Lorem ipsum dolor sit amet consectetur.</li>
+                <li>Lorem ipsum dolor sit amet consectetur.</li>
+                <li>Lorem ipsum dolor sit amet consectetur.</li>
+            </ul> -->
         </div>
+        <form id="main-form">
+            <input type="text" name="todo" id="todoField" placeholder="Enter in a task">
+        </form>
+        <a href="#" class="btn">New Task</a>
     </div>
 </body>
 </html>
