Added JS functions and more styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
     <title>Todo-List-App</title>
 </head>
@@ -12,16 +13,23 @@
             <h2>Todo List App</h2>
         </div>
         <div class="content">
-            <!-- <ul>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-                <li>Lorem ipsum dolor sit amet consectetur.</li>
-            </ul> -->
+            <ul>
+                <!-- <li>Lorem ipsum dolor sit amet consectetur.
+                    <i class="fas fa-trash"></i>
+                </li>
+                <li>Lorem ipsum dolor sit amet consectetur.
+                    <i class="fas fa-trash"></i>
+                </li>
+                <li>Lorem ipsum dolor sit amet consectetur.
+                    <i class="fas fa-trash"></i>
+                </li> -->
+            </ul>
         </div>
         <form id="main-form">
             <input type="text" name="todo" id="todoField" placeholder="Enter in a task">
+            <input type="submit" value="New Task" class="btn">
         </form>
-        <a href="#" class="btn">New Task</a>
     </div>
+    <script src="app.js"></script>
 </body>
 </html>
